--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <div>
             <h2>Process Scheduling Algorithms</h2> 
             <br>
-            <button onclick="document.location=''">First Come, First Served Scheduling</button>
+            <button onclick="document.location='fcfs.html'">First Come, First Served Scheduling</button>
             <br>
             <button onclick="document.location='shortjob.html'">Shortest Job First Scheduling</button>
             <br>
